--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table,tr,td,th{
+            border:1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <p style="color:rgb(6, 233, 157);font-size: 40px; background-color: brown;">Hello World</p>
+    <table>
+        <tr><td>sr.no.</td><td>Name</td><td>Total Marks</td></tr>
+        <tr><td>1</td><td>Jyoti</td><td>45</td></tr>
+        <tr><td>2</td><td>HHH</td><td>48</td></tr>
+    </table>
 </body>
 </html>
